--- a/style/style.css
+++ b/style/style.css
@@ -45,16 +45,84 @@ button:focus{
     position: relative;
     padding: 40px;
     border-radius: 20px;
+    transition: all .15s ease-out;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
+    -webkit-transition: all .15s ease-out;
+    -moz-transition: all .15s ease-out;
+    -ms-transition: all .15s ease-out;
+    -o-transition: all .15s ease-out;
 }
 
 .advice-card-wrapper{
     margin-bottom: 25px;
+    transition: all .15s ease-out;
+    -webkit-transition: all .15s ease-out;
+    -moz-transition: all .15s ease-out;
+    -ms-transition: all .15s ease-out;
+    -o-transition: all .15s ease-out;
 }
 
+.advice-card::after{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    z-index: 2;
+    border-radius: 20px;
+    transition: all .15s ease-out;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    -webkit-transition: all .15s ease-out;
+    -moz-transition: all .15s ease-out;
+    -ms-transition: all .15s ease-out;
+    -o-transition: all .15s ease-out;
+}
+
+.advice-card::before{
+    content: '';
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    z-index: 3;
+    border: 5px solid var(--clr-neon-green);
+    border-right-color: transparent;
+    border-radius: 50%;
+    left: 50%;
+    top: 45%;
+    animation: circleRotate .75s linear infinite;
+    transform: translate(-50%, -50%);
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    transition: all .15s ease-out;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    -webkit-animation: circleRotate .75s linear infinite;
+    -webkit-transition: all .15s ease-out;
+    -moz-transition: all .15s ease-out;
+    -ms-transition: all .15s ease-out;
+    -o-transition: all .15s ease-out;
+}
+
+.advice-card[data-preloader="off"]::before, .advice-card[data-preloader="off"]::after{
+    visibility: hidden;
+    opacity: 0;
+}
+
+.advice-card[data-preloader="on"]::before, .advice-card[data-preloader="on"]::after{
+    visibility: visible;
+    opacity: 1;
+}
 
 .advice-header{
     text-transform: uppercase;
@@ -77,6 +145,7 @@ button:focus{
     width: 65px;
     height: 65px;
     display: inline-flex;
+    z-index: 5;
     align-items: center;
     justify-content: center;
     transition: all .15s ease-out;
@@ -146,5 +215,15 @@ button:focus{
         -moz-transform: scale(0.9);
         -ms-transform: scale(0.9);
         -o-transform: scale(0.9);
+    }
 }
+
+@keyframes circleRotate {
+    to{
+        transform: translate(-50%, -50%) rotate(360deg);
+        -webkit-transform: translate(-50%, -50%) rotate(360deg);
+        -moz-transform: translate(-50%, -50%) rotate(360deg);
+        -ms-transform: translate(-50%, -50%) rotate(360deg);
+        -o-transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
