--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,7 @@ body{
     font-weight: var(--fw-bold);
     display: grid;
     place-items: center;
+    position: relative;
 }
 
 button:focus{
@@ -205,6 +206,20 @@ button:focus{
 
 .advice-card[data-preloader="off"] .advice-card-wrapper img{
     opacity: 1;
+}
+
+.attribution{
+    position: absolute;
+    text-align: center;
+    margin: auto 25px;
+    bottom: 20px;
+    font-size: var(--fs-subtitle);
+    font-weight: var(--fw-medium);
+}
+
+.attribution a{
+    color: var(--clr-neon-green);
+    font-weight: var(--fw-bold);
 }
 
 @media (max-width:375px){
